name:                Ereina
version:             0.1.1.1
synopsis: A service/system for expressing composable language rules on input documents in Persian language
description:
homepage:            https://github.com/Cirice/Ereina#readme
license:             BSD3
license-file:        LICENSE
author:              Hossein Abedi
maintainer:          abedi.hossein@protonmail.ch
copyright:           2018 Hossein Abedi
category:            Systems
build-type:          Simple
stability:           alpha
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types 
                     , Toolkit
                     , Internal.Rules
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , conduit
                     , resourcet
                     , conduit-extra
                     , conduit-combinators
                     , text
                     , containers
                     , parallel 
                     , yaml
                     , bytestring
                     , MissingH
                     , transformers 
                     , regex-base
                     , regex-pcre
  default-language:    Haskell2010

executable Ereina
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ereina
  default-language:    Haskell2010

test-suite Ereina-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , Ereina
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Cirice/Ereina
